# wasmdbg

./: .gitignore  Cargo.toml  README.md
wasmdbg/: Cargo.toml
wasmdbg-cli/src/: debugger.rs  main.rs
wasmdbg-cli/src/cmds/: context.rs  execution.rs  info.rs  mod.rs  modify.rs  printing.rs  utils.rs
wasmdbg-grpc/: Cargo.toml  build.rs
wasmdbg-grpc/proto/: interface.proto
wasmdbg-grpc/src/: debugger.rs  debugger_server.rs  grpc.rs  main.rs  utils.rs
wasmdbg/src/: debugger.rs  debuginfo.rs  file.rs  lib.rs
wasmdbg/src/vm/: import_func.rs  instance.rs  memory.rs  mod.rs
