[package]
name = "wasmdbg"
version = "0.1.0"
authors = ["Benedikt Werner <1benediktwerner@gmail.com>"]

description = "Debugger for wasm binaries"
license = "MIT OR Apache-2.0"
keywords = ["wasm", "webassembly", "debugger"]
categories = ["wasm", "development-tools::debugging"]
readme = "README.md"
documentation = "https://docs.rs/wasmdbg"
homepage = "https://github.com/benediktwerner/wasmdbg"
repository = "https://github.com/benediktwerner/wasmdbg.git"

edition = "2018"

[dependencies]
bwasm = "0.1"
thiserror = "1.0"
parity-wasm = { git = "https://github.com/HerrCai0907/parity-wasm.git", branch = "ignore-indexMap-out-of-order" }

[dev-dependencies]
rand = "0.7"
